--- a/FEB-P005/style.css
+++ b/FEB-P005/style.css
@@ -34,7 +34,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #d0e3f6;
+    background-color: #2c12a3;
     grid-area: header;
     margin-bottom: 10px;
   }
@@ -56,7 +56,7 @@
     text-align: center;
     font-size: 14px;
     font-family: 'Lato';
-    color: #307ecc;
+    color: #021e3a;
     margin: 2px;
     border: 1px solid #d3d3d3; /* 2 pixels de largura, sólida e cor preta */
     padding: 3px;
@@ -64,7 +64,7 @@
 
   .menu > ul > li > a {
     display: block;
-    color: #307ecc;
+    color: #0d61b6;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -73,7 +73,7 @@
   }
 
   .menu > ul > li > a:hover {
-    background-color: #307ecc;
+    background-color: #2c12a3;
     color: white;
   }
 
@@ -81,7 +81,7 @@
     display: flex;
     background-color: #d0e3f6;
     grid-area: footer;
-    color: #0473e2;
+    color: #140b8a;
     font-size: 12px;
     font-family: 'Roboto';
     margin-top: 10px;
@@ -130,7 +130,7 @@
     font-family: 'Roboto';
     font-size: 12px;
     display: block;
-    color: #307ecc;
+    color: #0c4a88;
   }
 
   .resultados {
@@ -196,7 +196,7 @@
     text-align: center;
     font-size: 14px;
     font-family: 'Lato';
-    color: #307ecc;
+    color: #1159a1;
     margin: 2px;
     border: 1px solid #d3d3d3; /* 2 pixels de largura, sólida e cor preta */
     padding: 3px;
@@ -213,7 +213,7 @@
   }
 
   .menu > ul > li > a:hover {
-    background-color: #307ecc;
+    background-color: #12487e;
     color: white;
   }
 
