--- a/FEB-P005/style.css
+++ b/FEB-P005/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap");
+﻿@import url("https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@900&family=Roboto:wght@300&display=swap");
 
 @media screen and (min-width: 500px) {
@@ -34,7 +34,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #2c12a3;
+    background-color: #d0e3f6;
     grid-area: header;
     margin-bottom: 10px;
   }
@@ -56,15 +56,15 @@
     text-align: center;
     font-size: 14px;
     font-family: 'Lato';
-    color: #021e3a;
+    color: #307ecc;
     margin: 2px;
-    border: 1px solid #d3d3d3; /* 2 pixels de largura, sólida e cor preta */
+    border: 1px solid #d3d3d3; /* 2 pixels de largura, sÃ³lida e cor preta */
     padding: 3px;
   }
 
   .menu > ul > li > a {
     display: block;
-    color: #0d61b6;
+    color: #307ecc;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -73,7 +73,7 @@
   }
 
   .menu > ul > li > a:hover {
-    background-color: #2c12a3;
+    background-color: #307ecc;
     color: white;
   }
 
@@ -81,7 +81,7 @@
     display: flex;
     background-color: #d0e3f6;
     grid-area: footer;
-    color: #140b8a;
+    color: #0473e2;
     font-size: 12px;
     font-family: 'Roboto';
     margin-top: 10px;
@@ -130,7 +130,7 @@
     font-family: 'Roboto';
     font-size: 12px;
     display: block;
-    color: #0c4a88;
+    color: #307ecc;
   }
 
   .resultados {
@@ -140,12 +140,41 @@
     padding: 5px;
   }
 
+  .resultados > p {
+    font-family: 'Roboto';
+    font-size: 12px;
+    margin-left: 30px;
+  }
+
+  .resultados > p > a {
+    font-size: 12px;
+    text-decoration: none;
+    font-family: 'Roboto';
+    font-size: 12px;
+    display: block;
+    color: #307ecc;
+  }
   .servicos {
     background-color: white;
     grid-area: servicos;
     border: 1px solid #d3d3d3; 
     padding: 5px;
   }
+  .servicos > p {
+    font-family: 'Roboto';
+    font-size: 12px;
+    margin-left: 30px;
+  }
+
+  .servicos > p > a {
+    font-size: 12px;
+    text-decoration: none;
+    font-family: 'Roboto';
+    font-size: 12px;
+    display: block;
+    color: #307ecc;
+  }
+
 }
 
 @media screen and (max-width: 500px){
@@ -196,9 +225,9 @@
     text-align: center;
     font-size: 14px;
     font-family: 'Lato';
-    color: #1159a1;
+    color: #307ecc;
     margin: 2px;
-    border: 1px solid #d3d3d3; /* 2 pixels de largura, sólida e cor preta */
+    border: 1px solid #d3d3d3; /* 2 pixels de largura, sÃ³lida e cor preta */
     padding: 3px;
   }
 
@@ -213,7 +242,7 @@
   }
 
   .menu > ul > li > a:hover {
-    background-color: #12487e;
+    background-color: #307ecc;
     color: white;
   }
 
@@ -273,9 +302,10 @@
   }
 
   .resultados {
-    background-color: white;
+    background-color: #FFF;
     grid-area: resultados;
     border: 1px solid #d3d3d3; 
+    padding: 5px; 
   }
 
   .servicos {
