--- a/FEB-P006/UESC-app/src/app/app.component.html
+++ b/FEB-P006/UESC-app/src/app/app.component.html
@@ -1,9 +1,1 @@
-<div class="gridContainer">
-    <app-header></app-header>
-    <app-nav></app-nav>
-    <app-noticias></app-noticias>
-    <app-destaque></app-destaque>
-    <app-servicos></app-servicos>
-    <app-resultados></app-resultados>
-    <app-footer></app-footer>
-</div>
+<app-uesc></app-uesc>
